# hello-sel4

./: .gitignore  .gitmodules
projects/hello/: .settings.cmake.swp  CMakeLists.txt  settings.cmake
